# astrbot-cli

./: Cargo.toml  README.md  dist-workspace.toml
src/: api.rs  cli.rs  config.rs  live_log.rs  log.rs  login.rs  main.rs  plugin.rs  stat.rs  utils.rs  verbose.rs
