[package]
name = "astrbot-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/un4gt/astrbot-cli"

[[bin]]
name = "astrbot"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
anyhow = "1.0.100"
strum = { version = "0.27", features = ["derive"] }
chrono = {version = "0.4.42",default-features = false, features = ["alloc"]}

[profile.release]
opt-level = 'z'
strip = true
panic = 'abort'
codegen-units = 1
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
